name:                example
version:             0.1.0.0
synopsis:            Example
description:         Example
license:             MIT
license-file:        LICENSE
author:              Alfredo Di Napoli
maintainer:          alfredo.dinapoli@gmail.com
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

executable example
  main-is:             Main.hs
  other-modules:
    Site
    App
  build-depends:
    base >=4.7 && < 5.0,
    text < 1.2.0.0,
    lens < 5.0,
    bytestring < 0.11,
    snap < 1.0.0.0,
    snap-core < 1.0.0.0,
    snap-server < 1.0.0.0,
    snap-loader-static < 1.0.0.0,
    snaplet-purescript == 0.3.0.0

  if flag(development)
    build-depends:
      snap-loader-dynamic >= 0.9 && < 0.11
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w -Wall
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
  -- hs-source-dirs:      
  default-language:    Haskell2010